// ce fichier sert à construire les exercices 1 a 3 de la partie 2 du projet de synthese (client, server, shared) et les tests associés
// il fait La Gestion des Sources, les Dépendances, les Tests (JUnit 5), la Couverture (JaCoCo), l'Analyse statique (Checkstyle et SpotBugs) et le Rapport global (projectReport).

// =============================================================================
// build.gradle — Projet Robi,  part2ex1/2/3 (Client-Serveur + CI/CD)
// Compatible Java 11+.
// =============================================================================

plugins {
    id 'java'
    id 'jacoco'
    id 'checkstyle'
    id 'com.github.spotbugs' version '6.0.9'
    id 'project-report'           // pour buildDashboard
}

group   = 'fr.robi'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

// =============================================================================
// Sources — on expose les packages SParser, 2DGraphicCore et tous les exercices
// =============================================================================
sourceSets {
    main {
        java {
            srcDirs = [
                'src',                              // Robi/src
                '../SParser/src',                   // SParser
                '../2DGraphicCore/src'              // 2DGraphicCore
            ]
        }
    }
    test {
        java {
            srcDirs = ['src']                       // les tests sont co-localisés
        }
    }
}

// =============================================================================
// Dépendances
// =============================================================================
repositories {
    mavenCentral()
}

dependencies {
    // Tests
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'

    // SpotBugs annotations (optionnel mais utile)
    compileOnly        'com.github.spotbugs:spotbugs-annotations:4.8.3'
}

// =============================================================================
// Tests — JUnit 5
// =============================================================================
test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
        showExceptions     = true
        showCauses         = true
        showStandardStreams = false
    }
    finalizedBy jacocoTestReport   // rapport JaCoCo généré après les tests
}

// =============================================================================
// Couverture — JaCoCo
// =============================================================================
jacoco {
    toolVersion = '0.8.11'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required   = true
        html.required  = true
        csv.required   = false
    }
    // On mesure uniquement les packages exercice7 (client, server, shared)
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, include: [
                'exercice7/**',
                'stree/parser/**'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.70   // 70 % de couverture minimale
            }
        }
    }
}

// =============================================================================
// Analyse statique — Checkstyle
// =============================================================================
checkstyle {
    toolVersion    = '10.14.2'
    configFile     = file("${rootDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = false
    showViolations = true
}

// =============================================================================
// Analyse statique — SpotBugs
// =============================================================================
spotbugs {
    toolVersion = '4.8.3'
    ignoreFailures = true
    effort = 'max'
    // On a supprimé reportLevel pour stopper l'erreur "Cannot convert value"
    
    // On pointe vers le fichier dans le sous-dossier 'robi'
    def excludeFile = file("Robi/exclude.xml")
    if (excludeFile.exists()) {
        excludeFilter = excludeFile
    }
}

spotbugsMain {
    reports {
        html { required = true }
        xml  { required = false }
    }
}

spotbugsTest {
    reports {
        html { required = true }
        xml  { required = false }
    }
}

// =============================================================================
// Rapport global (projectReport)
// =============================================================================
// buildDashboard a été supprimé depuis Gradle 8+.
// On utilise projectReport à la place (fourni par le plugin 'project-report').
